force-app/main/default/objects/Economy_Anomaly_Event__e/Economy_Anomaly_Event__e.object-meta.xml
<CustomObject>
    <label>Economy Anomaly Event</label>
    <pluralLabel>Economy Anomaly Events</pluralLabel>
</CustomObject>