force-app/main/default/objects/Economy_Anomaly_Event__e/fields/Anomaly_Type__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Type__c</fullName>
    <label>Anomaly Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>