force-app/main/default/objects/Economy_Anomaly_Event__e/fields/Country_Tag__c.field-meta.xml
<CustomField>
    <fullName>Country_Tag__c</fullName>
    <label>Country Tag</label>
    <type>Text</type>
    <length>10</length>
</CustomField>