force-app/main/default/objects/Economy_Anomaly_Event__e/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>