force-app/main/default/objects/Economy_Anomaly_Event__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>100</length>
</CustomField>